syntax = "proto3";

package key;

// Dynamic API KEY configuration
message KeyConfig {
  // Authentication token information
  message TokenInfo {
    message Token {
      string provider = 1;
      bytes sub_id = 2;               // User ID ([u8; 16])
      bytes randomness = 3;           // Random string ([u8; 8])
      int64 start = 4;                // Generation time (Unix timestamp)
      int64 end = 5;                  // Expiration time (Unix timestamp)
      bytes signature = 6;            // Signature ([u8; 32])
      bool is_session = 7;            // Whether it is a session token
    }
    Token token = 1;                  // Token
    bytes checksum = 2;               // Checksum ([u8; 64])
    bytes client_key = 3;             // Client identifier
    optional bytes config_version = 4;// Configuration version
    bytes session_id = 5;             // Session ID
    optional string proxy_name = 11;  // Proxy name
    optional string timezone = 12;    // Timezone
    optional int32  gcpp_host = 13;   // Code completion
  }

  // Authentication token (required)
  TokenInfo token_info = 1;

  // Password SHA256 hash value
  optional bytes secret = 2;

  // Whether to disable image processing capability
  optional bool disable_vision = 3;

  // Whether to enable slow pool
  optional bool enable_slow_pool = 4;

  // Package includes web references
  optional bool include_web_references = 5;

  // Usage check model rules
  message UsageCheckModel {
    // Check type
    enum Type {
      TYPE_DEFAULT = 0;     // Unspecified
      TYPE_DISABLED = 1;    // Disabled
      TYPE_ALL = 2;         // All
      TYPE_CUSTOM = 3;      // Custom list
    }
    Type type = 1;          // Check type
    repeated string model_ids = 2; // Model ID list, effective when type is TYPE_CUSTOM
  }
  // Usage check model rules
  optional UsageCheckModel usage_check_models = 6;
}
